# fasterGEMM

./: CMakeLists.txt  Makefile  READEME.md  README.md  gemm4x4.c  gemm8x8.c  gemmbase.c  gemmkr4x4v2.c  kernel_v1.c  kernel_v1.h  kernel_v2.c  testsgemm.c
include/: sgemm.h  tools.h  transpose.h  vecxmat.h  vecxvec.h
sgemmcuda/: sgemm.cu
src/: sgemm.cpp  tools.cpp  transpose.cpp  vecxmat.cpp  vecxvec.cpp
test/: CMakeLists.txt  test.cpp  testmatmul.cpp  testpadding.cpp
vecsumcuda/: sum_v1.cu  sum_v2.cu
